Opening the pop up

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 
 .pop{
     width:400px;
-    background:#fff;
+    background:rgb(146, 137, 137);
     border-radius:6px;
     position:absolute;
     top:0%;
@@ -21,10 +21,16 @@
     padding:0 30px 30px;
     color:#333;
     visibility:hidden;
+    transition: transform 0.4s, top 0.4s;
+}
+.open-popUp{
+    visibility: visible;
+    top:50%;
+    transform: translate(-50%,-50%) scale(1);
 }
 
 .pop h2{
-    font-size:3px;
+    font-size:38px;
     font-weight:500;
     margin:30px 0 10px;
 }
