--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,22 @@
+*{
+    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+}
+
 #grid{
     width:400px;
     height:300px;
     display:flexbox;
     flex-wrap: wrap;
     margin: auto; 
-    border: 3px solid #73AD21;
+    border: 3px solid rgb(132 204 22);
     padding-bottom: 0.7rem;
     padding-top:0.2rem
 }
 
 .pop{
     width:400px;
-    background:rgb(146, 137, 137);
+    background:rgb(187 247 208);
+    border: 3px solid rgb(234 88 12);
     border-radius:6px;
     position:absolute;
     top:0%;
@@ -22,6 +27,7 @@
     color:#333;
     visibility:hidden;
     transition: transform 0.4s, top 0.4s;
+    box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
 }
 .open-popUp{
     visibility: visible;
@@ -38,7 +44,8 @@
 .pop button{
     width: 100%;
     margin-top:50px;
-    padding:10px 0;
+    padding:0.5rem ;
+    padding-bottom: 0.5rem;;
     background:#6fd649;
     color:#fff;
     border:0;
@@ -47,4 +54,8 @@
     border-radius: 4px;
     cursor:pointer;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.pop button:hover{
+    background:#4ee716
 }
