--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,29 @@
 .pop button:hover{
     background:#4ee716
 }
+
+.footer{
+   position:fixed;
+   bottom:0;
+   width: 100%;
+   text-align: center;
+   padding-bottom: 4rem;
+}
+
+.footer .social{
+
+}
+
+.footer .social a{
+    font-size: 35px;
+    border: 1.5px solid;
+    border-color: #ccc;
+    color:black;
+    display:inline-block;
+    border-radius:20%;
+    opacity:0.75;
+}
+
+.footer .social a:hover{
+    opacity:2;
+}
