--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
 
 .pop{
     width:400px;
+    height:300px;
     background:rgb(187 247 208);
     border: 3px solid rgb(234 88 12);
     border-radius:6px;
@@ -23,7 +24,7 @@
     left:50%;
     transform: translate(-50%,-50%) scale(0.1);
     text-align: center;
-    padding:0 30px 30px;
+    /* padding:0 30px 30px; */
     color:#333;
     visibility:hidden;
     transition: transform 0.4s, top 0.4s;
@@ -31,7 +32,7 @@
 }
 .open-popUp{
     visibility: visible;
-    top:50%;
+    top:40%;
     transform: translate(-50%,-50%) scale(1);
 }
 
@@ -42,16 +43,15 @@
 }
 
 .pop button{
-    width: 100%;
-    margin-top:50px;
-    padding:0.5rem ;
-    padding-bottom: 0.5rem;;
+    width: 50%;
+    height:35px;
+    margin-top:10px;
     background:#6fd649;
     color:#fff;
     border:0;
     outline:none;
     font-size:18px;
-    border-radius: 4px;
+    border-radius: 8px;
     cursor:pointer;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
@@ -60,17 +60,15 @@
     background:#4ee716
 }
 
+
 .footer{
-   position:fixed;
+
    bottom:0;
    width: 100%;
    text-align: center;
-   padding-bottom: 4rem;
+   padding : 4rem 0rem;
 }
 
-.footer .social{
-
-}
 
 .footer .social a{
     font-size: 35px;
@@ -80,6 +78,7 @@
     display:inline-block;
     border-radius:20%;
     opacity:0.75;
+
 }
 
 .footer .social a:hover{
